# hallucinet_round2

./: .env.example  .gitignore  .hfignore  Dockerfile  README.md  adversarial_coordinator.py  adversarial_results.csv  adversarial_results_groq_run.csv  blog.md  client.py  curriculum.py  grader.py  inference.py  models.py  openenv.yaml  plot_results.py  project_context.md  pyproject.toml  requirements.txt  sample_generator.py  tasks.py  test_run_output.txt
env/: pyvenv.cfg
hallucinet_adversarial/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
hallucinet_adversarial/server/: Dockerfile  __init__.py  app.py  hallucinet_adversarial_environment.py
server/: app.py  environment.py  generator_environment.py  requirements.txt
tests/: evaluate_scores.py  test_grader.py
