[project]
name = "hallucinet-adversarial"
version = "2.0.0"
description = "Adversarial self-improving hallucination detection — generator vs detector multi-agent RL"
authors = [
    {name = "team-tle"}
]
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
app = "server.app:app"
port = 7860

[project.scripts]
server = "server.app:main"
